--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Canthika Sitompul</h5>
+                            <h5 class="mb-0">Cantika Sitompul</h5>
                         </div>
                     </div>
                 </div>
@@ -444,7 +444,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Dominic Christine</h5>
+                            <h5 class="mb-0">Dominic Christine Angela</h5>
                         </div>
                     </div>
                 </div>
@@ -490,7 +490,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Gabriella Teressa</h5>
+                            <h5 class="mb-0">Gabriella Theresa</h5>
                         </div>
                     </div>
                 </div>
@@ -609,7 +609,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Sherren Nagita</h5>
+                            <h5 class="mb-0">Sheren Agita</h5>
                         </div>
                     </div>
                 </div>
